Bug 1075727 - Update rdsEnabled based on the return value of hal::EnableRDS, r=pzhang